--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
+# Go build artifacts
 go.sum
-.idea
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Go test artifacts
+*.test
+*.out
+coverage.txt
+
+# Go module cache
+vendor/
+
+# IDE & Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Application specific
+*.db
+*.sqlite
+*.sqlite3
+.env
+.env.local
+
+# Build & Deploy
+/dist/
+/build/
+/tmp/
+*.log
